# OpenGL-Cpp-GameEngine

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  copy_assets_to_build.sh
assets/shaders/: default.frag  default.vert  defaultText.frag  defaultText.vert  ditheredAlpha.frag
cmake/: FindGLFW3.cmake  FindGLM.cmake
inc/: CreateShader.h  asset.h  cStringUtilities.h  camera.h  createShader.h  font.h  glUtilities.h  gl_parse_shader.h  gl_shader_uniform.h  gl_types.h  hashTable.h  hash_table.h  material.h  mesh.h  renderable.h  shader.h  shaderUniform.h  shaderUniformTypes.h  texture.h  vectorMath.h
src/: asset.cpp  cStringUtilities.c  camera.cpp  createShader.cpp  font.cpp  glUtilities.cpp  gl_math.c  gl_parse_shader.cpp  gl_shader_uniform.c  gl_types.c  hash_table.c  main.cpp  material.cpp  mesh.cpp  par_shapes.c  renderable.cpp  shader.cpp  shaderUniform.c  shaderUniformTypes.c  texture.cpp
